  * Enabled C and Java test suites:
    - d/control,d/compat: Bumped debhelper compat level to 8 to allow 
      arch/indep overrides.
    - d/rules: Enable test suites for -arch and -indep builds.
    - d/patches/debian/patch-build-system: Patch unit testing to exclude 
      InvalidSnapshot and Upgrade tests (non-free data) and to pickup 
      junit4 from system library.
  * Close RFH for this package (LP: #579791).

  [ Damien Raude-Morvan ]
  * Add DMUA flag for James Page.
  * Build-Depends on procps for test suite.

 -- James Page <james.page@ubuntu.com>  Wed, 30 Nov 2011 10:55:30 +0000

zookeeper (3.3.3+dfsg2-2) unstable; urgency=low

  * Updated patch for ZOOKEEPER-1117 with fixes accepted into
    zookeeper 3.4.0 upstream; should also resolve FTBFS on ia64.
  * Close RFH from original maintainer (Closes: #602694).
  * debian/zookeeper.cron.daily: handle return code of 1 so daily cron job
    does not produce error emails when the package is removed but not
    purged (Closes: #582757). Thanks to Clint Byrum for this fix.

 -- James Page <james.page@ubuntu.com>  Wed, 31 Aug 2011 08:51:04 +0100

zookeeper (3.3.3+dfsg2-1) unstable; urgency=low

  * Re-enable python 2.7 modules (Closes: #633690):
    - debian/control: X-Python-Version: >= 2.6
  * debian/copyright: added EPL-1.0 for src/contrib/zooinspector/icons/*.
  * debian/patches/fixes/ZOOKEEPER-1033: Cherry picked patch from 3.4.0 
    so that headers for c bindings are installed to /usr/include/zookeeper.
  * Purged additional non-DFSG files from upstream source:
    - src/java/test/data/* : invalid snapshot and upgrade testing data.

 -- James Page <james.page@ubuntu.com>  Wed, 13 Jul 2011 10:01:47 +0100

zookeeper (3.3.3+dfsg1-1) unstable; urgency=low

  * New upstream release.
  * Resolve FTBFS on mips and hppa - platforms should not be supported 
    as zookeeper needs default-jdk >= 1:1.6 (Closes: #626020,#594970).
  * Added myself to Uploaders.