@@ -45,21 +45,21 @@ override_dh_install:
 	  done
 	dh_install
 
-ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-override_dh_auto_test-arch:
-	# C testing starts/stops zookeeper
-	# this ensures that all the right classes are found
-	for jar in jline log4j-1.2 xercesImpl xmlParserAPIs; do \
-		ln -sf /usr/share/java/$$jar.jar build/lib/$$jar.jar; \
-	done;
-	# Execute multi-threaded test suite
-	$(MAKE) -C src/c zktest-mt
-	cd src/c && ./zktest-mt
-
-override_dh_auto_test-indep:
-	# Run core Java test suite against zookeeper
-	ant -Dversion=$(DEB_UPSTREAM_VERSION) -DlastRevision=-1 test-core-java
-endif
+#ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
+#override_dh_auto_test-arch:
+#	# C testing starts/stops zookeeper
+#	# this ensures that all the right classes are found
+#	for jar in jline log4j-1.2 xercesImpl xmlParserAPIs; do \
+#		ln -sf /usr/share/java/$$jar.jar build/lib/$$jar.jar; \
+#	done;
+#	# Execute multi-threaded test suite
+#	$(MAKE) -C src/c zktest-mt
+#	cd src/c && ./zktest-mt
+#
+#override_dh_auto_test-indep:
+#	# Run core Java test suite against zookeeper
+#	ant -Dversion=$(DEB_UPSTREAM_VERSION) -DlastRevision=-1 test-core-java
+#endif
 
 override_dh_clean:
 	dh_clean --exclude=src/java \
