@@ -16,13 +16,15 @@ zookeeper (3.3.4+dfsg1-1) unstable; urgency=low
     - d/patches/debian/patch-build-system: Patch unit testing to exclude 
       InvalidSnapshot and Upgrade tests (non-free data) and to pickup 
       junit4 from system library.
+    - d/rules: Disable test suite execution for the time being as does 
+      not run reliably.
   * Close RFH for this package (LP: #579791).
 
   [ Damien Raude-Morvan ]
   * Add DMUA flag for James Page.
   * Build-Depends on procps for test suite.
 
- -- James Page <james.page@ubuntu.com>  Wed, 30 Nov 2011 10:55:30 +0000
+ -- James Page <james.page@ubuntu.com>  Thu, 01 Dec 2011 15:03:53 +0000
 
 zookeeper (3.3.3+dfsg2-2) unstable; urgency=low
 
